[gd_scene load_steps=3 format=3 uid="uid://dyuic1ki0jxi7"]

[ext_resource type="Script" path="res://scenes/auth/AnonAccountScene.gd" id="1_pswgp"]
[ext_resource type="PackedScene" uid="uid://8213lw6ps1sr" path="res://ui/overlays/LoadingOverlay.tscn" id="2_qfgmb"]

[node name="AnonAccountScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pswgp")

[node name="UI" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 50

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "anon.lbl.anon"

[node name="ErrorLabel" type="Label" parent="UI/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.921569, 0.301961, 0.294118, 1)
text = "Error: Txt asdf asdlökfj aösdlkfj aösldkjf aösldkfj aölsdkfj aölskdfj öalksdjf asdöfl kjasdf "
autowrap_mode = 2

[node name="InfoLabel" type="Label" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "anon.lbl.info"
autowrap_mode = 2

[node name="VBoxName" type="VBoxContainer" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="UI/MarginContainer/VBoxContainer/VBoxName"]
layout_mode = 2
text = "anon.lbl.name"

[node name="Name" type="LineEdit" parent="UI/MarginContainer/VBoxContainer/VBoxName"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxEMail" type="VBoxContainer" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="VBoxPW" type="VBoxContainer" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="MarginContainerBtn" type="MarginContainer" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 40

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer/VBoxContainer/MarginContainerBtn"]
layout_mode = 2

[node name="SignUpButton" type="Button" parent="UI/MarginContainer/VBoxContainer/MarginContainerBtn/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "anon.btn.signup"

[node name="BackButton" type="Button" parent="UI/MarginContainer/VBoxContainer/MarginContainerBtn/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "anon.btn.back"

[node name="LoadingOverlay" parent="UI" instance=ExtResource("2_qfgmb")]
unique_name_in_owner = true
visible = false
